--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -3,13 +3,13 @@
 pkgname=comm-cinnamon-config
 pkgdesc="Package configuration Desktop Cinnamon"
 # Uncomment and edit the following lines as needed
-depends=('comm-skel')
+depends=('comm-skel' 'comm-improve-compatibility' 'lightdm-slick-greeter')
 #makedepends=('')
 #optdepends=('')
-conflicts=('big-skel' 'bashrc-manjaro')
+conflicts=('big-skel' 'bashrc-manjaro' 'lightdm-webkit2-greeter' 'lightdm-webkit2-theme-community')
 #provides=('')
 #replaces=('')
-pkgver=$(date +%y.%m.%d)
+pkgver=$(date +%Y%m%d)
 pkgrel=$(date +%H%M)
 arch=('any')
 license=('MIT')
